[package]
edition = "2018"
name = "linear-quadtree"
version = "0.2.1"

[[bin]]
name = "linear-quadtree"

[features]
default = ["enc", "dec"]
enc = ["std"]
dec = ["embedded-graphics"]
std = ["argh", "bitvec/std"]

[dependencies]
argh = { version = "0.1.5", optional = true }
bitvec = { version = "0.22.3", default-features = false }
embedded-graphics = { version = "0.7.1", optional = true }

[dev-dependencies]
embedded-graphics-simulator = { version = "0.3", default-features = false }
