[package]
edition = "2018"
name = "linear-quadtree"
version = "0.3.0"

[[bin]]
name = "linear-quadtree"

[features]
default = ["enc", "dec"]
enc = ["std"]
dec = ["embedded-graphics"]
std = ["argh", "bitvec/std"]

[dependencies]
argh = { version = "0.1", optional = true }
bitvec = { version = "1", default-features = false }
embedded-graphics = { version = "0.7.1", optional = true }
heapless = "0.7.5"

[dev-dependencies]
embedded-graphics-simulator = { version = "0.3", default-features = false }
