[package]
edition = "2018"
name = "monochrome-quadtree"
version = "0.6.0"

[[bin]]
name = "monochrome-quadtree"

[features]
default = ["enc", "dec"]
enc = ["std"]
dec = ["embedded-graphics"]
std = ["argh", "bitvec/std"]

[dependencies]
argh = { version = "0.1", optional = true }
bitvec = { version = "1", default-features = false }
embedded-graphics = { version = "0.7.1", optional = true }
heapless = "0.7.5"

[dev-dependencies]
embedded-graphics-simulator = { version = "0.4", default-features = false }

[profile.dev.package.bitvec]
opt-level = 3
