[package]
name = "playback-simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7"
embedded-graphics-simulator = "0.3"

[dependencies.monochrome-quadtree]
path = ".."
default-features = false
features = ["dec"]

[profile.release]
debug = true
